# predictur

./: .gitignore  AGENTS.md  README.md  pyproject.toml
caribe-app/: README.md  index.html  package-lock.json  package.json  start_tunnel.sh
caribe-app/scripts/: build-data.mjs
caribe-app/src/: App.jsx  data.json  index.css
data/processed/: master_tourism_series.csv
data/raw/: anexos-EMA-abril-2021.xlsx  anexos-EMA-abril-2022.xlsx  anexos-EMA-abril-2023.xlsx  anexos-EMA-abril-2024.xlsx  anexos-EMA-abril-2025.xlsx  anexos-EMA-agosto-2020.xlsx  anexos-EMA-agosto-2021.xlsx  anexos-EMA-agosto-2022.xlsx  anexos-EMA-agosto-2023.xlsx  anexos-EMA-agosto-2024.xlsx  anexos-EMA-agosto-2025.xlsx  anexos-EMA-diciembre-2020.xlsx  anexos-EMA-diciembre-2021.xlsx  anexos-EMA-diciembre-2022.xlsx  anexos-EMA-diciembre-2023.xlsx  anexos-EMA-diciembre-2024.xlsx  anexos-EMA-diciembre-2025.xlsx  anexos-EMA-enero-2021.xlsx  anexos-EMA-enero-2022.xlsx  anexos-EMA-enero-2023.xlsx  anexos-EMA-enero-2024.xlsx  anexos-EMA-enero-2025.xlsx  anexos-EMA-enero-2026.xlsx  anexos-EMA-febrero-2021.xlsx  anexos-EMA-febrero-2022.xlsx  anexos-EMA-febrero-2023.xlsx  anexos-EMA-febrero-2024.xlsx  anexos-EMA-febrero-2025.xlsx  anexos-EMA-febrero-2026.xlsx  anexos-EMA-julio-2020.xlsx  anexos-EMA-julio-2021.xlsx  anexos-EMA-julio-2022.xlsx  anexos-EMA-julio-2023.xlsx  (+36 more)
notebooks/: EDA-and-Results.ipynb  EDA.ipynb  modeling.ipynb  pipeline_walkthrough.ipynb
reports/: cv_predictions.csv  ensemble_weights.csv  forecast.csv  metrics.csv
scripts/: download_ema.py  extract_ema_data.py  run_forecasting.py
(+21 files in other folders)
